# spec-kit

./: pyproject.toml
